--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+
 body {
+    font-family: Quicksand, sans-serif;
     background: #b2d430;
+    font-weight: 300;
+}
+
+h1 {
+    text-align: center;
 }
