--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: Quicksand, sans-serif;
     background: #b2d430;
     font-weight: 300;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.quiz_container {
+    overflow: hidden;
+    background-color: #fff5f5;
+    box-shadow: 0 0 10px 20 px rgba(100, 100, 100, 0.1);
+    align-items: center;
+}
+
+ul {
+    list-style-type: none;
+}
+
+ul li label {
+    cursor: pointer;
+}
+
+.btn {
+    cursor: pointer;
 }
