--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
     background: #b2d430;
     font-weight: 300;
     font-size: 1.2em;
+    display: flex;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -19,13 +20,16 @@ body {
 }
 
 .quiz_container {
-    overflow: hidden;
     background-color: #fff5f5;
-    margin: 0 auto;
     box-shadow: 0 0 10px 20 px rgba(100, 100, 100, 0.1);
+    display: flex;
+    flex-direction:column;
     align-items: center;
-    width: 50%;
+    width: 60%;
+    max-width: 600px;
     border-radius: 10px;
+    padding: 20px;
+    text-align: center;
 }
 
 ul {
@@ -38,11 +42,12 @@ ul li label {
 
 .btn {
     cursor: pointer;
-    width: 10%;
+    width: 120px;
     padding: 10px;
     border-radius: 10px;
     font-size: 1.2rem;
     font-weight: bold;
+    border-top: 10px;
 
 }
 
@@ -63,6 +68,7 @@ hr {
 
 .score {
     background-color: #fff5f5;
-    width: 6%;
+    width: 100px;
+    
     margin: 0 auto;
 }
