--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,10 +39,12 @@ h1 {
 
 ul {
     list-style-type: none;
+    margin: 10px 0;
 }
 
 ul li label {
     cursor: pointer;
+    font-size: 1.1rem;
 }
 
 .btn {
@@ -52,7 +54,10 @@ ul li label {
     border-radius: 10px;
     font-size: 1.2rem;
     font-weight: bold;
-    border-top: 10px;
+    background-color: #ff6f61;
+    color: white;
+    border: none;
+    margin-top: 20px;
 
 }
 
@@ -65,10 +70,8 @@ ul li label {
     font-weight: bold;
 }
 
-hr {
-    width: 8%;
-    margin: 0 auto;
-
+.btn:hover {
+    background-color: #ff5a4d;
 }
 
 .score {
