--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,9 @@ ul li label {
 .score {
     background-color: #fff5f5;
     width: 100px;
-    
-    margin: 0 auto;
+    margin: 20px auto;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
