--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
-
+/* Apply box-sizing to all elements */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
+/* General body styling */
 body {
     font-family: Quicksand, sans-serif;
     background: #b2d430;
@@ -20,11 +21,13 @@ body {
     text-align: center;
 }
 
+/* Styling for the main heading */
 h1 {
     margin-bottom: 20px;
     font-size: 2rem;
 }
 
+/* Styling for the quiz container */
 .quiz_container {
     background-color: #fff5f5;
     box-shadow: 0 0 10px 20 px rgba(100, 100, 100, 0.1);
@@ -37,11 +40,12 @@ h1 {
     margin-bottom: 20px;
 }
 
-
+/* Styling for the quiz heading */
 .quiz_heading {
     margin-bottom: 20px;
 }
 
+/* Styling for the answer list */
 ul {
     list-style-type: none;
     margin: 10px 0;
@@ -49,15 +53,18 @@ ul {
     margin: 0 0 20px 0;
 }
 
+/* Styling for each answer option */
 ul li {
     margin: 10px 0;
 }
 
+/* Styling for labels within list items */
 ul li label {
     cursor: pointer;
     font-size: 1.1rem;
 }
 
+/* Styling for buttons */
 .btn {
     cursor: pointer;
     width: 120px;
@@ -72,10 +79,12 @@ ul li label {
 
 }
 
+/* Hover effect for buttons */
 .btn:hover {
     background-color: gold;
 }
 
+/* Styling for the score display */
 .score {
     background-color: #fff5f5;
     width: 100px;
