--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ ul li label {
     border-radius: 10px;
     font-size: 1.2rem;
     font-weight: bold;
-    background-color: gold;
+    background-color: #0D0D0D;
     color: white;
     border: none;
     margin-top: 20px;
@@ -82,7 +82,7 @@ ul li label {
 
 /* Hover effect for buttons */
 .btn:hover {
-    background-color: gold;
+    background-color: #0D0D0D;
 }
 
 /* Styling for the score display */
