--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,13 @@ body {
     text-align: center;
 }
 
+form {
+    width: 100%; /* Ensure the form takes full width */
+    display: flex; /* Use flexbox for layout */
+    flex-direction: column; /* Arrange items in a column */
+    align-items: center; /* Center items horizontally */
+}
+
 /* Styling for the main heading */
 h1 {
     margin-bottom: 20px;
@@ -39,6 +46,7 @@ h1 {
     padding: 20px;
     text-align: center;
     margin-bottom: 20px;
+    margin: auto;
 }
 
 /* Styling for the quiz heading */
